syntax = "proto3";

service ProductsManager {
rpc GetProducts (ProductRequest) returns (stream ProductResponse) {}
}

message ProductRequest {
string user = 1;
}

message ProductResponse {
string id = 1;
}